--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,49 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/glycemic?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#APPLICATION_PROPERTIES
+spring.application.name=Glycemic Indexer
+spring.profiles.active=local
+spring.output.ansi.enabled=always
 
-server.servlet.session.timeout= 86400s
+#SESSION
+server.servlet.session.timeout=86400s
 server.servlet.session.cookie.name=SESSION_ID
 server.servlet.session.cookie.max-age=1440M
 
+#DEVTOOLS
+spring.devtools.restart.exclude=resources/**,web-inf/**
+
+#ACTUATOR
+management.endpoint.health.show-details=always
+
+#SENTRY
+sentry.send-default-pii=true
+sentry.logs.enabled=true
+sentry.traces-sample-rate=1.0
+
+#DATA_SOURCE
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=com.glycemic.core.config.DatabaseConfigurer
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
+spring.jpa.properties.hibernate.connection.CharSet=utf-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.properties.hibernate.connection.collationConnection=utf8_bin
+spring.jpa.properties.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.sql.init.continue-on-error=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+#REDIS
+spring.cache.type=redis
+
+#LOGGING
+logging.file.path=./logs
+logging.file.name=${logging.file.path}/glycemic.log
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){magenta} - %highlight(%-5level) - %clr(%-35logger{25}){cyan} - %clr([%t]){green} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %-35logger{25} - [%t] - %msg%n
+
+#MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-# App Properties
-spring.application.name=Glycemic Indexer
-app.jwtSecret=glycemic_app_secret
-app.jwtExpirationMs=86400000
-app.pageElementSize=8
-app.activationExpire=86400000
-app.resetPassExpire=86400000
-##https://glycemic-react.herokuapp.com/  http://localhost:3000/
-app.siteUrl=https://glycemic-react.herokuapp.com/
