Application-properties update Properties committed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #APPLICATION_PROPERTIES
 spring.application.name=Glycemic Indexer
-spring.profiles.active=local
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 spring.output.ansi.enabled=always
 
 #SESSION
