Updates for maven.yml Added new environment variables.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,21 @@
 
 name: Java CI with Maven
 env:
-  SPRING_PROFILES_ACTIVE: prod
+  SPRING_PROFILES_ACTIVE: ${{ vars.SPRING_PROFILES_ACTIVE }}
+  SENTRY_DSN: ${{ vars.SENTRY_DSN }}
+  SPRING_DATASOURCE_JDBCURL: ${{ vars.SPRING_DATASOURCE_JDBCURL }}
+  SPRING_SECOND_DATASOURCE_JDBCURL: ${{ vars.SPRING_SECOND_DATASOURCE_JDBCURL }}
+  SPRING_REDIS_HOST: ${{ vars.SPRING_REDIS_HOST }}
+  SPRING_REDIS_PORT: ${{ vars.SPRING_REDIS_PORT }}
+  APP_SECRET: ${{ secrets.APP_SECRET }}
+  SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
+  SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
+  SPRING_SECOND_DATASOURCE_PASSWORD: ${{ secrets.SPRING_SECOND_DATASOURCE_PASSWORD }}
+  SPRING_SECOND_DATASOURCE_USERNAME: ${{ secrets.SPRING_SECOND_DATASOURCE_USERNAME }}
+  SPRING_MAIL_PASSWORD: ${{ secrets.SPRING_MAIL_PASSWORD }}
+  SPRING_MAIL_USERNAME: ${{ secrets.SPRING_MAIL_USERNAME }}
+  SPRING_REDIS_USERNAME: ${{ secrets.SPRING_REDIS_USERNAME }}
+  SPRING_REDIS_PASSWORD: ${{ secrets.SPRING_REDIS_PASSWORD }}
 on:
   push:
     branches: [ "master" ]
