--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,12 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up JDK 25
       uses: actions/setup-java@v4
+      with:
+        java-version: '25'
+        distribution: 'oracle'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
       env:
         SPRING_PROFILES_ACTIVE: ${{ vars.SPRING_PROFILES_ACTIVE }}
         SENTRY_DSN: ${{ vars.SENTRY_DSN }}
@@ -38,13 +44,10 @@ jobs:
         SPRING_MAIL_USERNAME: ${{ secrets.SPRING_MAIL_USERNAME }}
         SPRING_REDIS_USERNAME: ${{ secrets.SPRING_REDIS_USERNAME }}
         SPRING_REDIS_PASSWORD: ${{ secrets.SPRING_REDIS_PASSWORD }}
-      with:
-        java-version: '25'
-        distribution: 'oracle'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Debug Variables
+      run:
+        echo "Aktif profil: ${{ vars.SPRING_PROFILES_ACTIVE }}"
