--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,5 +49,4 @@ jobs:
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
     - name: Debug Variables
-      run:
-        echo "Aktif profil: ${{ vars.SPRING_PROFILES_ACTIVE }}"
+      run: echo "Aktif profil: ${{ vars.SPRING_PROFILES_ACTIVE }}"
