--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,14 +27,13 @@ jobs:
         distribution: 'oracle'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
       env:
-        SPRING_PROFILES_ACTIVE: ${{ vars.SPRING_PROFILES_ACTIVE }}
-        SENTRY_DSN: ${{ vars.SENTRY_DSN }}
-        SPRING_DATASOURCE_JDBCURL: ${{ vars.SPRING_DATASOURCE_JDBCURL }}
-        SPRING_SECOND_DATASOURCE_JDBCURL: ${{ vars.SPRING_SECOND_DATASOURCE_JDBCURL }}
-        SPRING_REDIS_HOST: ${{ vars.SPRING_REDIS_HOST }}
-        SPRING_REDIS_PORT: ${{ vars.SPRING_REDIS_PORT }}
+        SPRING_PROFILES_ACTIVE: ${{ env.SPRING_PROFILES_ACTIVE }}
+        SENTRY_DSN: ${{ env.SENTRY_DSN }}
+        SPRING_DATASOURCE_JDBCURL: ${{ env.SPRING_DATASOURCE_JDBCURL }}
+        SPRING_SECOND_DATASOURCE_JDBCURL: ${{ env.SPRING_SECOND_DATASOURCE_JDBCURL }}
+        SPRING_REDIS_HOST: ${{ env.SPRING_REDIS_HOST }}
+        SPRING_REDIS_PORT: ${{ env.SPRING_REDIS_PORT }}
         APP_SECRET: ${{ secrets.APP_SECRET }}
         SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
         SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
@@ -44,9 +43,11 @@ jobs:
         SPRING_MAIL_USERNAME: ${{ secrets.SPRING_MAIL_USERNAME }}
         SPRING_REDIS_USERNAME: ${{ secrets.SPRING_REDIS_USERNAME }}
         SPRING_REDIS_PASSWORD: ${{ secrets.SPRING_REDIS_PASSWORD }}
+      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
     - name: Debug Variables
-      run:  echo "Aktif profil '${{ vars.SPRING_PROFILES_ACTIVE }}'"
+      run: |
+        echo '${{ env.SPRING_PROFILES_ACTIVE }}'
