--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-
+    environment: production
     runs-on: ubuntu-latest
 
     steps:
@@ -28,12 +28,12 @@ jobs:
         cache: maven
     - name: Build with Maven
       env:
-        SPRING_PROFILES_ACTIVE: ${{ env.SPRING_PROFILES_ACTIVE }}
-        SENTRY_DSN: ${{ env.SENTRY_DSN }}
-        SPRING_DATASOURCE_JDBCURL: ${{ env.SPRING_DATASOURCE_JDBCURL }}
-        SPRING_SECOND_DATASOURCE_JDBCURL: ${{ env.SPRING_SECOND_DATASOURCE_JDBCURL }}
-        SPRING_REDIS_HOST: ${{ env.SPRING_REDIS_HOST }}
-        SPRING_REDIS_PORT: ${{ env.SPRING_REDIS_PORT }}
+        SPRING_PROFILES_ACTIVE: ${{ vars.SPRING_PROFILES_ACTIVE }}
+        SENTRY_DSN: ${{ vars.SENTRY_DSN }}
+        SPRING_DATASOURCE_JDBCURL: ${{ vars.SPRING_DATASOURCE_JDBCURL }}
+        SPRING_SECOND_DATASOURCE_JDBCURL: ${{ vars.SPRING_SECOND_DATASOURCE_JDBCURL }}
+        SPRING_REDIS_HOST: ${{ vars.SPRING_REDIS_HOST }}
+        SPRING_REDIS_PORT: ${{ vars.SPRING_REDIS_PORT }}
         APP_SECRET: ${{ secrets.APP_SECRET }}
         SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
         SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
@@ -50,4 +50,4 @@ jobs:
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
     - name: Debug Variables
       run: |
-        echo '${{ env.SPRING_PROFILES_ACTIVE }}'
+        echo '${{ vars.SPRING_PROFILES_ACTIVE }}'
